pagination alignment fixed

--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -194,6 +194,8 @@ main > section {
 
   ul {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
   }
 
